@@ -1,4 +1,6 @@
 MD5 5f4a5fe70fc5e942a4a7c05d6ecf11a0 graveman-0.2-r20041227.ebuild 818
 MD5 f6ae03147b33c97f5bb09d5de8690601 metadata.xml 227
-MD5 b8d6fe31e59bc84233b0cc4a5c3fff76 ChangeLog 557
+MD5 61afb9c306eedc983edf2f3ef3ab6672 ChangeLog 718
+MD5 0851bb9f2ec112b84b7a64e2ed633c77 graveman-0.3.2.ebuild 1035
 MD5 a938d3164d0b71f68918acea712033c4 files/digest-graveman-0.2-r20041227 74
+MD5 fbad861b00ef458a37635af1e5c43c6e files/digest-graveman-0.3.2 67
